# GstreamerTutorial_8

./: CMakeLists.txt  README.md
GstreamerTutorial_8/: CMakeLists.txt  GstreamerTutorial_8.cpp  GstreamerTutorial_8.h
